[gd_scene load_steps=4 format=2]

[ext_resource path="res://Level/Level.gd" type="Script" id=1]
[ext_resource path="res://GUI/PauseMenu/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/LevelHUD/LevelHUD.tscn" type="PackedScene" id=3]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="PauseMenu" parent="." instance=ExtResource( 2 )]

[node name="LevelHUD" parent="." instance=ExtResource( 3 )]
[connection signal="restart" from="PauseMenu" to="." method="_on_PauseMenu_restart"]
[connection signal="skip_cutscene" from="PauseMenu" to="." method="_on_PauseMenu_skip_cutscene"]
